2005-09-12 22:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Copy the .gorm file into the Resources.
	* GormCore/GormInspectorsManager.h: Use the inspector panel gorm.
	* GormCore/GormInspectorsManager.m: Use the inspector panel gorm.
	* English.lproj/GormInspectorPanel.gorm: corrects bug#13767.
	* English.lproj/GormDummyInspector.gorm: corrects bug#13767.
	
2005-09-04 10:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/4Data/GormNSComboBoxAttributesInspector.m: In ok:
	performs a revert to show any changes which were made
	automatically as a result of other changes.

2005-09-04 10:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormWindowAttributesInspector.m
	* Palettes/1Windows/GormWindowSizeInspector.m
	* Palettes/2Controls/GormBoxAttributesInspector.m
	* Palettes/2Controls/GormColorWellAttributesInspector.m
	* Palettes/2Controls/GormMatrixAttributesInspector.m
	* Palettes/2Controls/GormNSTextFieldInspector.gorm
	* Palettes/2Controls/GormTextFieldAttributesInspector.m
	* Palettes/3Containers/GormTableColumnAttributesInspector.m
	* Palettes/3Containers/GormTableViewAttributesInspector.m
	* Palettes/4Data/GormNSComboBoxAttributesInspector.h
	* Palettes/4Data/GormNSComboBoxAttributesInspector.m
	* Palettes/4Data/GormNSComboBoxInspector.gorm
	* Palettes/4Data/GormTextViewAttributesInspector.m: Removed all
	extraneous and unecessary (and annoying) #warning messages.

2005-08-29 22:41 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormFormAttributesInspector.h: Added ivar
	autosizeSwitch.
	* Palettes/2Controls/GormFormAttributesInspector.m: Added code
	to handle autosize flag.
	* Palettes/2Controls/GormNSFormInspector.gorm: Added autosize flag
	* Palettes/2Controls/GormNSMatrixInspector.gorm: Box on bottom
	now reads "Options".

2005-08-29 19:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormMatrixEditor.m: Corrected bug in